--- a/packages/mpg123-decoder/packages/wasm-audio-decoders-common/package.json
+++ b/packages/mpg123-decoder/packages/wasm-audio-decoders-common/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@wasm-audio-decoders/common",
-  "version": "9.0.5",
+  "name": "wasm-audio-decoders-common",
+  "version": "0.0.1",
   "description": "Web Assembly Audio Decoders Common",
   "module": "index.js",
   "main": "index.js",
